--- a/src/views/detalle-de-producto.html
+++ b/src/views/detalle-de-producto.html
@@ -1,13 +1,169 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+     <!-- Bootstrap CSS -->
+     <link rel="stylesheet" href="/css/bootstrap.min.css" >
+     <link rel="stylesheet" href="/css/app.css" >
+     <link rel="stylesheet" href="/css/producto.css" >
+     <link rel="stylesheet" href="/css/normalize.css" >
+ 
+
     <title>Detalle de producto</title>
+
+ 
 </head>
 <body>
         
-        <img src="/images/detalle-producto.jpg" width="60%">
+    <header>
+                 
+        <nav class="navbar navbar-expand-lg navbar-dark"  style="background-color:#00a8ff;">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+          <a class="navbar-brand" href="#">LOGO</a>
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link " href="/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item  nav-href">
+              <a class="nav-link"  href="#">Juguetes</a>
+            </li>
+
+            <li class="nav-item nav-href">
+              <a class="nav-link" href="#">Personajes</a>
+            </li>
+
+            <li class="nav-item nav-href">
+              <a class="nav-link" href="#">Edad</a>
+            </li>
+
+            <li class="nav-item nav-href">
+              <a class="nav-link" href="#">Para la escuela</a>
+            </li>
+
+            <li class="nav-item nav-href">
+              <a class="nav-link" href="#">Sucursales</a>
+            </li>
+
+            <li class="nav-item nav-href">
+              <a class="nav-link " href="#" tabindex="-1" >Login</a>
+            </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="buscar" aria-label="Search">
+            <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Buscar</button>
+          </form>
+        </div>
+      </nav>
+
+</header>
+
+<section class="container main">
+    <div class="row">
+       <article class="caja-productos">
+           <div class="botones">
+               <img src="/images/buzz.jpg" alt="">
+               <img src="/images/buzz.jpg" alt="">
+               <img src="/images/buzz.jpg" alt="">
+               <img src="/images/buzz.jpg" alt="">
+           </div>
+           <div class="vista">
+                <img src="/images/buzz.jpg" alt="">
+           </div>
+           <div class="detalle-producto">
+               <h1 class="nombre-producto">Toy Story 4 Woody Y Buzz Lightyear Muñecos 60 Frases, Disney Pixar Original.</h1>
+               <div class="precio-producto">
+                   <span>$ 13.800</span>
+               </div>
+               <div class="caja-cantidad">
+                    <select  class="form-control" id="cantidad">
+                            <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                            <option>5</option>
+                        </select>
+                </div>
+                <button type="button" class="btn btn-primary boton-login">Login y comprar</button>
+               <div class="desc">DESCRIPCION:</div>
+               <p>Llegaron los Muñecos amigos parlantes de Woody y Buzz Lightyear Toy Story 4, Disney Pixar!! </p>
+               <p>¡Woody y Buzz están listos para tener un montón de aventuras junto a vos!                </p>
+               <p>¡Ambos dicen más de 35 frases en total con la voz original en español y son articulados!-*Woody</p>
+               <p>¡Más de 15 Frases! </p>
+               <div class="caja-tarjetas">
+                   <img src="/images/tarjetas.jpg" alt="">
+                   <p><strong>¡Hasta 3 cuotas sin interés! </strong></p>
+                   <p>Con tarjetas Visa, MasterCard y Amex de Banco Galicia.</p>
+               </div> 
+           </div> <!-- detalle producto-->
+       </article>
+    </div>
+
+</section>
+
+
+<footer class="container-fluid">
+    <section class="row">
+       <div class="caja-footer">
+          <article class="col-12 col-sm-6 col-md-6 col-lg-4">
+              <h5>Suscribete para recibir novedades</h5>
+              <p>Actualizamos nuestros productos constantemente
+                de acuerdo a las tendencias.
+              </p>
+              <form class="form-inline" align="left">
+                <div class="form-group mb-2">
+                  <label for="staticEmail2" class="sr-only">Email</label>
+                  <input type="text" readonly class="form-control-plaintex outline-light" id="suscrubur" value="email@ejemplo.com">
+                </div>
+                
+                <button type="submit" class="btn btn-outline-light  mb-2">Suscribir</button>
+              </form>
+          </article>
+          
+
+         
+          <div class="col-12 col-sm-6 col-md-6 col-lg-2">
+            <ul class="list-unstyled text-small">
+            <li>+54 11 0000 0000</li>
+            <li>INFO@JUGUETERIA.COM</li>
+            <li>SUCURSAL</li>
+          </ul>
+          </div>
+
+          <div class="col-12 col-sm-6 col-md-6 col-lg-2">
+            <ul class="list-unstyled text-small">
+            <li>INFORMACION SOBRE ENVIOS</li>
+            <li>DEVOLUCIONES</li>
+            <li>VENTAS EMPRESARIALES</li>
+          </ul>
+          </div>
+          <div class="col-12 col-sm-6 col-md-6 col-lg-2">
+            <ul class="list-unstyled text-small">
+            <li>POLITICA DE PAGOS</li>
+            <li>TERMINOS Y CONDICIONES</li>
+            <li>POLITICA DE PRIVACIDAD</li>
+          </ul>
+          </div>
+
+          <div class="col-12 col-sm-6 col-md-6 col-lg-2">
+            <ul class="list-unstyled text-small">
+            <li>SOBRE NOSOTROS</li>
+            <li>SUCURSALES</li>
+          </ul>
+          </div>
+        </div> <!--caja footer-->
+    </section>
+</footer>
+
+    
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="/js/bootstrap.min.js" ></script>
 </body>
 </html>
