--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,13 +1,177 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Home Page</title>
-	<link rel="stylesheet" href="/css/app.css">
-</head>
-<body>
-	<h1>Home Page Jugueteria</h1>
-	<img src="/images/menu-home.jpg" width="60%">
-</body>
+<!doctype html>
+<html lang="es">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="/css/bootstrap.min.css" >
+    <link rel="stylesheet" href="/css/app.css" >
+    <link rel="stylesheet" href="/css/normalize.css" >
+    <title>Marketplace Jugueteria</title>
+
+  </head>
+  <body>
+    
+      <header>
+                 
+                <nav class="navbar navbar-expand-lg navbar-dark"  style="background-color:#00a8ff;">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                  <a class="navbar-brand" href="#">LOGO</a>
+                  <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                    <li class="nav-item active">
+                      <a class="nav-link " href="/">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item  nav-href">
+                      <a class="nav-link"  href="#">Juguetes</a>
+                    </li>
+
+                    <li class="nav-item nav-href">
+                      <a class="nav-link" href="#">Personajes</a>
+                    </li>
+
+                    <li class="nav-item nav-href">
+                      <a class="nav-link" href="#">Edad</a>
+                    </li>
+
+                    <li class="nav-item nav-href">
+                      <a class="nav-link" href="#">Para la escuela</a>
+                    </li>
+
+                    <li class="nav-item nav-href">
+                      <a class="nav-link" href="#">Sucursales</a>
+                    </li>
+                    <li class="nav-item nav-href">
+                      <a class="nav-link " href="#" tabindex="-1" >Login</a>
+                    </li>
+                
+                  </ul>
+                  <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="buscar" aria-label="Search">
+                    <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Buscar</button>
+                  </form>
+                </div>
+              </nav>
+
+              <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img class="d-block w-100" src="/images/slide-cry-babies.jpg" alt="First slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="/images/slider-lol.jpg" alt="Second slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="/images/slide-fortnite.jpg" alt="Third slide">
+                      </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+            </div>
+      </header>
+      <section class="container ">
+              <div class="row">
+               <article class="categorias col-12 col-md-3 ">
+                  <img src="/images/menu-muñecos-y-accesorios.jpg" alt="menu muñecos y accesorios">
+               </article>
+               <article class="categorias col-12 col-md-3 ">
+                  <img src="/images/menu-primera-infancia.jpg" alt="menu primera infancia">
+               </article>
+               <article class="categorias col-12 col-md-6 ">
+                  <img src="/images/menu-mochilas.jpg" alt="menu articulos para escuela">
+               </article>
+
+             </div> <!-- row-->
+
+            <div class="row">
+              <article class="categorias col-12 col-md-6 ">
+                  <img src="/images/menu-vehiculos-y-pistas.jpg" alt="menu vehiculos">
+               </article>
+               <article class="categorias col-12 col-md-3 ">
+                  <img src="/images/menu-juegos.jpg" alt="menu juegos de mesa">
+               </article>
+               <article class="categorias col-12 col-md-3 ">
+                  <img src="/images/muñecos-y-peluches.jpg" alt="menu muñecos y peluches">
+               </article>
+            </div> <!-- row-->
+
+      </section>
+      <!---->
+      <footer class="container-fluid">
+              <section class="row">
+                 <div class="caja-footer">
+                    <article class="col-12 col-sm-6 col-md-6 col-lg-4">
+                        <h5>Suscribete para recibir novedades</h5>
+                        <p>Actualizamos nuestros productos constantemente
+                          de acuerdo a las tendencias.
+                        </p>
+                        <form class="form-inline" align="left">
+                          <div class="form-group mb-2">
+                            <label for="staticEmail2" class="sr-only">Email</label>
+                            <input type="text" readonly class="form-control-plaintex outline-light" id="suscrubur" value="email@ejemplo.com">
+                          </div>
+                          
+                          <button type="submit" class="btn btn-outline-light  mb-2">Suscribir</button>
+                        </form>
+                    </article>
+                    
+
+                   
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-2">
+                      <ul class="list-unstyled text-small">
+                      <li>+54 11 0000 0000</li>
+                      <li>INFO@JUGUETERIA.COM</li>
+                      <li>SUCURSAL</li>
+                    </ul>
+                    </div>
+
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-2">
+                      <ul class="list-unstyled text-small">
+                      <li>INFORMACION SOBRE ENVIOS</li>
+                      <li>DEVOLUCIONES</li>
+                      <li>VENTAS EMPRESARIALES</li>
+                    </ul>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-2">
+                      <ul class="list-unstyled text-small">
+                      <li>POLITICA DE PAGOS</li>
+                      <li>TERMINOS Y CONDICIONES</li>
+                      <li>POLITICA DE PRIVACIDAD</li>
+                    </ul>
+                    </div>
+
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-2">
+                      <ul class="list-unstyled text-small">
+                      <li>SOBRE NOSOTROS</li>
+                      <li>SUCURSALES</li>
+                    </ul>
+                    </div>
+                  </div> <!--caja footer-->
+              </section>
+      </footer>
+
+   
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="/js/bootstrap.min.js" ></script>
+  </body>
 </html>
