--- a/src/views/index.html
+++ b/src/views/index.html
@@ -106,7 +106,7 @@
                   <img src="/images/menu-juegos.jpg" alt="menu juegos de mesa">
                </article>
                <article class="categorias col-12 col-md-3 ">
-                  <img src="/images/muñecos-y-peluches.jpg" alt="menu muñecos y peluches">
+                  <img src="/images/menu-munecos-y-peluches.jpg" alt="menu muñecos y peluches">
                </article>
             </div> <!-- row-->
 
