--- a/src/views/products/edit.ejs
+++ b/src/views/products/edit.ejs
@@ -8,7 +8,7 @@
         <h1>Edit Form</h1>
         ction class="container main">
         <div class="row ">
-          <form action="/products/cargar-producto" method="POST" enctype="multipart/form-data">
+          <form action="/products/edicion" method="POST" enctype="multipart/form-data">
             <div class="form-row descripcion">
               <div class="form-group ">
                   <label ><strong>Subir fotos de producto</strong></label><br>
